added new class 'TextAnalyzer'

--- a/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms.csproj
@@ -41,8 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Huffman\HuffmanCodes.cs" />
+    <Compile Include="Huffman\HuffmanCode.cs" />
     <Compile Include="Huffman\Node.cs" />
+    <Compile Include="Huffman\TextAnalyzer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
