--- a/AlgorithmsTests/AlgorithmsTests.csproj
+++ b/AlgorithmsTests/AlgorithmsTests.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CRCTest.cs" />
     <Compile Include="HuffmanTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextAnalyzerTest.cs" />
