--- a/AlgorithmsTests/AlgorithmsTests.csproj
+++ b/AlgorithmsTests/AlgorithmsTests.csproj
@@ -45,6 +45,7 @@
     <Compile Include="CRCTest.cs" />
     <Compile Include="HuffmanTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringConverterTest.cs" />
     <Compile Include="TextAnalyzerTest.cs" />
   </ItemGroup>
   <ItemGroup>
